--- a/app/package.json
+++ b/app/package.json
@@ -28,6 +28,7 @@
     "@aws-sdk/client-s3": "3.623.0",
     "@gitbeaker/node": "35.8.1",
     "@google-cloud/storage": "6.11.0",
+    "@octokit/rest": "^16.43.2",
     "adm-zip": "0.5.10",
     "archiver": "5.3.1",
     "basic-ftp": "5.0.5",
@@ -36,13 +37,15 @@
     "codemirror": "5.65.13",
     "codemirror-revisedsearch": "1.0.12",
     "count-files": "2.6.2",
-    "dompurify": "3.1.6",
+    "dompurify": "^3.2.6",
     "easymde": "2.18.0",
     "fast-memoize": "2.5.2",
     "fast-xml-parser": "4.4.1",
     "fs-extra": "11.1.1",
     "ftp": "0.3.10",
-    "github": "9.2.0",
+    "github": "^14.0.0",
+    "github-api": "^3.4.0",
+    "glob": "^11.0.2",
     "handlebars": "4.7.8",
     "html-minifier": "4.0.0",
     "image-downloader": "4.3.0",
@@ -52,22 +55,22 @@
     "jimp": "0.22.12",
     "js-beautify": "1.14.8",
     "keytar": "7.9.0",
-    "ls-all": "1.1.0",
+    "ls-all": "^0.1.0",
     "marked": "5.1.1",
     "mime": "3.0.0",
     "moment": "2.29.4",
     "node-sqlite3-wasm": "0.8.19",
     "node-version-compare": "1.0.3",
     "normalize-path": "3.0.0",
-    "prismjs": "1.29.0",
+    "prismjs": "^1.30.0",
     "sharp": "0.34.1",
     "slug": "0.9.4",
     "sqlstring": "2.3.3",
     "ssh2-sftp-client": "10.0.3",
     "striptags": "3.2.0",
-    "tar-fs": "3.0.4",
+    "tar-fs": "^3.0.8",
     "transliteration": "2.3.5",
-    "vue": "2.6.14",
+    "vue": "^2.7.16",
     "vue-color": "2.4.5",
     "vue-i18n": "8.24.2",
     "vue-multiselect": "2.0.8",
@@ -78,6 +81,10 @@
   },
   "devDependencies": {
     "electron": "31.7.7",
-    "node-abi": "3.65.0"
+    "node-abi": "3.65.0",
+    "sass": "^1.89.0",
+    "vue-loader": "^15.9.8",
+    "vue-style-loader": "^4.1.3",
+    "vue-template-compiler": "^2.7.16"
   }
 }
